# Techcorp

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pre-commit-config.yaml  pyproject.toml
.github/workflows/: build.yml  ci.yml
knowledge_base/: company_it_policies.md  knowledge_base.md  knowledge_base_index.faiss
src/: __init__.py  app.py  classifier.py  config.py  help_desk_system.py  knowledge_base.py  models.py  response_generator.py
tests/: classifier_test.py  help_desk_system_test.py  knowledge_base_fileio_test.py  knowledge_base_test.py  response_generator_test.py  test.ipynb  test_classifier.py  test_knowledge_base.py  test_models.py
